--- a/src/Cubee/pom.xml
+++ b/src/Cubee/pom.xml
@@ -26,7 +26,7 @@
         <developerConnection>scm:git:git@github.com:EagerLogic/Cubee.git</developerConnection>
         <url>git@github.com:EagerLogic/Cubee.git</url>
     </scm>
-    
+
     <developers>
         <developer>
             <name>David Ipacs</name>
@@ -43,17 +43,17 @@
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>doctusoft.snapshots.public</id>
+			<url>http://pubrepo.doctusoft.com/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 
     <dependencies>
         <dependency>
@@ -174,5 +174,4 @@
             </build>
         </profile>
     </profiles>
-    
 </project>
