--- a/src/Cubee/pom.xml
+++ b/src/Cubee/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.eagerlogic.cubee</groupId>
     <artifactId>cubee</artifactId>
-    <version>0.3.0</version>
+    <version>0.4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Cubee</name>
